...
	}

	return (
		<GestureDetector gesture={gesture}>
			<Animated.View
				collapsable={false}
				testID='miniplayer-test-id'
				entering={FadeInDown.springify()}
				exiting={FadeOutDown.springify()}
			>
				<YStack
					pressStyle={pressStyle}
					animation={'quick'}
...
