...
			/>

			<RootStack.Screen
				name='AddToPlaylist'
				component={AddToPlaylistSheet}
				options={{
					headerTitle: 'Add to Playlist',
					presentation: 'modal',
					sheetGrabberVisible: true,
				}}
			/>

			<RootStack.Screen
...
