...

export type StackParamList = {
    Home: undefined;

    Discover: undefined;

    Favorites: undefined;
    Artists: undefined;
    Albums: undefined;
    Tracks: undefined;
    Genres: undefined;
    Playlists: undefined;

    Search: undefined;

...
