...
import { getImageApi, getItemsApi } from '@jellyfin/sdk/lib/utils/api'
import { useQuery } from '@tanstack/react-query'
import { useState } from 'react'
import { ScrollView, FlatList } from 'react-native'
import { useSafeAreaFrame } from 'react-native-safe-area-context'
import { YStack } from 'tamagui'
import FavoriteButton from '../Global/components/favorite-button'
import { ItemCard } from '../Global/components/item-card'
import { H3 } from '../Global/helpers/text'
import fetchSimilar from '../../api/queries/functions/similar'
import { Image } from 'expo-image'

export function ArtistScreen({
...
