...

	return recentlyAddedExists ? (
		<Animated.View
			entering={FadeIn.easing(Easing.in(Easing.ease))}
			exiting={FadeOut.easing(Easing.out(Easing.ease))}
			layout={LinearTransition.springify()}
			testID='discover-recently-added'
			style={{
				flex: 1,
			}}
		>
			<XStack
				alignItems='center'
...
