...
			onLayout={handleLayout}
		>
			{nowPlaying && (
				<Animated.View key={`${nowPlaying!.item.AlbumId}-item-image`} style={animatedStyle}>
					<ItemImage
						item={nowPlaying!.item}
						testID='player-image-test-id'
						imageOptions={{ maxWidth: 800, maxHeight: 800 }}
					/>
				</Animated.View>
			)}
		</YStack>
	)
...
